--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,197 @@
+body {
+  font-family: Arial, sans-serif;
+}
 
-/* LOADER */
+.App {
+  max-width: 1000px;
+  margin: 0 auto;
+  padding-top: 50px;
+  display: flex;
+  justify-content: center;
+  padding-left: 16px;
+  padding-right: 16px;
+  flex-wrap: wrap;
+}
 
-.lds-ring {
+.search input {
+  margin-bottom: 17px;
+}
+
+.search {
+  width: 100%;
+}
+
+.search button {
+  display: block;
+  margin: 0 auto;
+  width: 160px;
+}
+
+.error h2 {
+  font-size: 16px;
+}
+
+.city {
+  text-align: center;
+}
+
+.wheater {
+  width: 80%;
+}
+
+.wheater h3 {
+  color: rgba(0, 0, 0, .5);
+  font-size: 18px;
+  text-align: center;
+}
+
+.whater-content {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-top: 50px;
+  padding-bottom: 60px;
+  border-bottom: 1px solid rgba(0, 0, 0, .1);
+}
+
+.whater-content>div>span {
+  font-size: 29px;
+}
+
+.whater-content>div {
+  text-align: center;
+}
+
+.wheater-footer {
+  text-align: center;
+  margin-top: 36px;
+}
+
+.wheater-footer>div {
+  margin-bottom: 9px;
+}
+
+.wheater-footer>div span {
+  margin: 0 5px;
+}
+
+.whater-content img {
+  display: block;
+  width: 100px;
+  margin: 0 auto;
+  opacity: .8;
+}
+
+.lds-spinner {
+  color: official;
   display: inline-block;
   position: relative;
   width: 80px;
   height: 80px;
 }
-.lds-ring div {
-  box-sizing: border-box;
+
+.lds-spinner div {
+  transform-origin: 40px 40px;
+  animation: lds-spinner 1.2s linear infinite;
+}
+
+.lds-spinner div:after {
+  content: " ";
   display: block;
   position: absolute;
-  width: 64px;
-  height: 64px;
-  margin: 8px;
-  border: 8px solid #1e1f25;
-  border-radius: 50%;
-  animation: lds-ring 1.2s cubic-bezier(0.5, 0, 0.5, 1) infinite;
-  border-color: #1e1f25 transparent transparent transparent;
+  top: 3px;
+  left: 37px;
+  width: 6px;
+  height: 18px;
+  border-radius: 20%;
+  background: #384049;
 }
-.lds-ring div:nth-child(1) {
-  animation-delay: -0.45s;
+
+.lds-spinner div:nth-child(1) {
+  transform: rotate(0deg);
+  animation-delay: -1.1s;
 }
-.lds-ring div:nth-child(2) {
+
+.lds-spinner div:nth-child(2) {
+  transform: rotate(30deg);
+  animation-delay: -1s;
+}
+
+.lds-spinner div:nth-child(3) {
+  transform: rotate(60deg);
+  animation-delay: -0.9s;
+}
+
+.lds-spinner div:nth-child(4) {
+  transform: rotate(90deg);
+  animation-delay: -0.8s;
+}
+
+.lds-spinner div:nth-child(5) {
+  transform: rotate(120deg);
+  animation-delay: -0.7s;
+}
+
+.lds-spinner div:nth-child(6) {
+  transform: rotate(150deg);
+  animation-delay: -0.6s;
+}
+
+.lds-spinner div:nth-child(7) {
+  transform: rotate(180deg);
+  animation-delay: -0.5s;
+}
+
+.lds-spinner div:nth-child(8) {
+  transform: rotate(210deg);
+  animation-delay: -0.4s;
+}
+
+.lds-spinner div:nth-child(9) {
+  transform: rotate(240deg);
   animation-delay: -0.3s;
 }
-.lds-ring div:nth-child(3) {
-  animation-delay: -0.15s;
+
+.lds-spinner div:nth-child(10) {
+  transform: rotate(270deg);
+  animation-delay: -0.2s;
 }
-@keyframes lds-ring {
+
+.lds-spinner div:nth-child(11) {
+  transform: rotate(300deg);
+  animation-delay: -0.1s;
+}
+
+.lds-spinner div:nth-child(12) {
+  transform: rotate(330deg);
+  animation-delay: 0s;
+}
+
+@keyframes lds-spinner {
   0% {
-    transform: rotate(0deg);
+    opacity: 1;
   }
+
   100% {
-    transform: rotate(360deg);
+    opacity: 0;
+  }
+}
+
+@media(min-width: 900px) {
+  .search input {
+    width: 330px;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+  }
+}
+
+@media(max-width: 900px) {
+  .whater-content {
+    flex-direction: column;
+  }
+
+  .whater-content>div:nth-of-type(2) {
+    padding: 36px 0;
   }
 }
